Avance vista landing
Se reorganiza la información del landing + se añade logo

--- a/footer.html
+++ b/footer.html
@@ -2,10 +2,9 @@
   <div class="container py-5">
     <div class="row gy-4">
       <div class="col-lg-3">
-        <img class="mb-4" src="img/logo.svg" alt="" width="110" />
+        <img class="mb-4" src="img/logo-websavvy.svg" alt="" width="160" />
         <p class="text-muted">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore.
+          Simplificando tus procesos, optimizando tu éxito.
         </p>
       </div>
       <div class="col-lg-2">
@@ -87,12 +86,8 @@
   <div class="copyrights">
     <div class="container text-center py-4">
       <p class="mb-0 text-muted text-sm">
-        &copy; 2021, Your company. Template by
-        <a
-          href="https://bootstrapious.com/p/app-landing-page"
-          class="text-reset"
-          >Bootstrapious</a
-        >.
+        &copy; 2023, WebSavvy. Todos los derechos reservados por
+        <a href="https://www.websavvy.cl" class="text-reset">WebSavvy</a>.
       </p>
       <!-- If you want to remove the backlink, please purchase the Attribution-Free License. See details in readme.txt or license.txt. Thanks!-->
     </div>
