--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html"
-        ><img src="img/logo.svg" alt="" width="110"
+        ><img src="img/logo-websavvy.svg" alt="Logo WebSavvy" width="160"
       /></a>
       <button
         class="navbar-toggler navbar-toggler-end"
