Avance vista landing
Se finaliza sección Inicio, Nosotros y en sección características se avanza en la primera aplicación web (pymes).

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
       <div class="container py-5">
         <div class="row align-items-center mb-5 gy-5">
           <div class="col-lg-6">
-            <img class="img-fluid w-100 px-lg-5" src="img/objects.svg" alt="" />
+            <img
+              class="img-fluid w-100 px-lg-5"
+              src="img/objects.svg"
+              alt="Vector secretary image"
+            />
           </div>
           <div class="col-lg-6">
             <!-- <h2>Las mejores soluciones al alcance de tus manos</h2> -->
@@ -123,9 +127,43 @@
         </div> -->
       </div>
     </section>
+    <!-- About Section -->
+    <section class="with-pattern-1 py-5" id="about">
+      <div class="container text-center">
+        <p class="h6 text-uppercase text-primary">¿Quienes somos?</p>
+        <h2>
+          Potencia tu negocio y práctica nutricional con nuestras aplicaciones
+          web especializadas
+        </h2>
+        <div class="row align-items-center mb-5 gy-5">
+          <div class="col-lg-7">
+            <p class="text-muted">
+              Bienvenido a WebSavvy, donde simplificamos la gestión empresarial
+              y nutricional con nuestras poderosas aplicaciones web. Ya sea que
+              dirijas una pequeña pyme o seas un nutricionista profesional,
+              nuestras herramientas están diseñadas para optimizar tus procesos
+              y potenciar tu éxito. Desde la gestión de productos y ventas hasta
+              el seguimiento de registros sanitarios y el etiquetado
+              nutricional, nuestras aplicaciones te brindan las soluciones
+              inteligentes que necesitas. Descubre cómo WebSavvy puede
+              transformar tu negocio y práctica nutricional. ¡Únete a nosotros y
+              desbloquea tu potencial!
+            </p>
+          </div>
+          <div class="col-lg-5">
+            <img
+              class="img-fluid w-100 px-lg-5"
+              src="img/quienes-somos.svg"
+              alt="Vector About Us image"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- features Section -->
     <section
       class="bg-center py-0"
-      id="about"
+      id="features"
       style="
         background: url(img/service-bg.svg) no-repeat;
         background-size: cover;
@@ -133,33 +171,37 @@
     >
       <section class="about py-0">
         <div class="container">
-          <p class="h6 text-uppercase text-primary">¿Por qué elegirnos?</p>
+          <p class="h6 text-uppercase text-primary">Aplicación para Pymes</p>
           <!-- <h2 class="mb-5">
             Potencia tu negocio y práctica nutricional con nuestras aplicaciones
             web especializadas
           </h2> -->
           <div class="row align-items-center gy-5">
             <div class="col-lg-6">
-              <h2>Make your own success as simple you clap</h2>
+              <h2>Potentes herramientas para el éxito empresarial</h2>
               <p class="text-muted">
-                Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
-                labore dolore magna aliqua enim ad minim veniam quis nostrud
-                exercitation.
+                Nuestra aplicación web de gestión empresarial es la solución
+                completa para las pequeñas pymes. Simplifica tus operaciones
+                diarias, maximiza tus ventas y optimiza la eficiencia de tu
+                negocio. Con características como la gestión integral, ecommerce
+                integrado, control de inventario en tiempo real y análisis de
+                ventas, nuestra aplicación te brinda el poder de crecer y
+                prosperar en el mundo empresarial digital.
               </p>
               <ul class="list-check">
-                <li class="text-muted mb-2">Various Analysis Options</li>
+                <li class="text-muted mb-2">Gestión integral del negocio</li>
+                <li class="text-muted mb-2">Ecommerce integrado</li>
                 <li class="text-muted mb-2">
-                  Page Load Details (time, size, number of requests)
+                  Control de inventario en tiempo real
                 </li>
-                <li class="text-muted mb-2">
-                  Waterfall, Video and Report History
-                </li>
+                <li class="text-muted mb-2">Análisis y reportes de ventas</li>
+                <li class="text-muted mb-2">Seguridad y respaldo de datos</li>
               </ul>
               <button
                 class="btn btn-primary js-modal-btn"
                 data-video-id="B6uuIHpFkuo"
               >
-                <i class="fas fa-play-circle me-2"></i>Play video
+                <i class="fas fa-play-circle me-2"></i>Video demo
               </button>
             </div>
             <div class="col-lg-6">
@@ -174,9 +216,9 @@
                       >
                         <use xlink:href="#document-saved-1"></use>
                       </svg>
-                      <h3 class="h5 my-3">Online Marketing</h3>
+                      <h3 class="h5 my-3">Carácteristica 1</h3>
                       <p class="text-sm mb-0 text-muted">
-                        Lorem ipsum dolor amet consectetur adipisicing.
+                        Info característica 1.
                       </p>
                     </div>
                   </div>
@@ -191,9 +233,9 @@
                       >
                         <use xlink:href="#map-marker-1"></use>
                       </svg>
-                      <h3 class="h5 my-3">Track your move</h3>
+                      <h3 class="h5 my-3">Carácteristica 2</h3>
                       <p class="text-sm mb-0 text-muted">
-                        Lorem ipsum dolor amet consectetur adipisicing.
+                        Info característica 2.
                       </p>
                     </div>
                   </div>
@@ -208,9 +250,9 @@
                       >
                         <use xlink:href="#arrow-target-1"></use>
                       </svg>
-                      <h3 class="h5 my-3">Market analysis</h3>
+                      <h3 class="h5 my-3">Carácteristica 3</h3>
                       <p class="text-sm mb-0 text-muted">
-                        Lorem ipsum dolor amet consectetur adipisicing.
+                        Info característica 3.
                       </p>
                     </div>
                   </div>
@@ -225,9 +267,9 @@
                       >
                         <use xlink:href="#sorting-1"></use>
                       </svg>
-                      <h3 class="h5 my-3">Full Settings</h3>
+                      <h3 class="h5 my-3">Carácteristica 4</h3>
                       <p class="text-sm mb-0 text-muted">
-                        Lorem ipsum dolor amet consectetur adipisicing.
+                        Info característica 4.
                       </p>
                     </div>
                   </div>
@@ -290,131 +332,129 @@
           </div> -->
         </div>
       </section>
-      <section class="with-pattern-1 py-5" id="services">
-        <div class="container py-5">
-          <div class="row align-items-center mb-5 gy-5">
-            <div class="col-lg-6">
-              <img
-                class="img-fluid w-100 px-lg-5"
-                src="img/objects.svg"
-                alt=""
-              />
-            </div>
-            <div class="col-lg-6">
-              <h2>The Best Business Solutions Guide for You</h2>
-              <p class="text-muted">
-                Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
-                labore dolore magna aliqua enim ad minim veniam quis nostrud
-                exercitation.
-              </p>
-              <button
-                class="btn btn-primary js-modal-btn"
-                data-video-id="B6uuIHpFkuo"
-              >
-                <i class="fas fa-play-circle me-2"></i>Play video
-              </button>
-            </div>
+    </section>
+    <!-- Services Section -->
+    <section class="with-pattern-1 py-5" id="services">
+      <div class="container py-5">
+        <div class="row align-items-center mb-5 gy-5">
+          <div class="col-lg-6">
+            <img class="img-fluid w-100 px-lg-5" src="img/objects.svg" alt="" />
           </div>
-          <div class="row align-items-center gy-5">
-            <div class="col-lg-6">
-              <h2>Make your own success as simple you clap</h2>
-              <p class="text-muted">
-                Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
-                labore dolore magna aliqua enim ad minim veniam quis nostrud
-                exercitation.
-              </p>
-              <ul class="list-check">
-                <li class="text-muted mb-2">Various Analysis Options</li>
-                <li class="text-muted mb-2">
-                  Page Load Details (time, size, number of requests)
-                </li>
-                <li class="text-muted mb-2">
-                  Waterfall, Video and Report History
-                </li>
-              </ul>
-              <button
-                class="btn btn-primary js-modal-btn"
-                data-video-id="B6uuIHpFkuo"
-              >
-                <i class="fas fa-play-circle me-2"></i>Play video
-              </button>
-            </div>
-            <div class="col-lg-6">
-              <div class="row gy-4">
-                <div class="col-lg-6 col-sm-6">
-                  <!-- Services Item-->
-                  <div class="card border-0 shadow rounded-lg text-start px-2">
-                    <div class="card-body px py-5">
-                      <svg
-                        class="svg-icon"
-                        style="width: 40px; height: 40px; color: #ff904e"
-                      >
-                        <use xlink:href="#document-saved-1"></use>
-                      </svg>
-                      <h3 class="h5 my-3">Online Marketing</h3>
-                      <p class="text-sm mb-0 text-muted">
-                        Lorem ipsum dolor amet consectetur adipisicing.
-                      </p>
-                    </div>
+          <div class="col-lg-6">
+            <h2>The Best Business Solutions Guide for You</h2>
+            <p class="text-muted">
+              Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
+              labore dolore magna aliqua enim ad minim veniam quis nostrud
+              exercitation.
+            </p>
+            <button
+              class="btn btn-primary js-modal-btn"
+              data-video-id="B6uuIHpFkuo"
+            >
+              <i class="fas fa-play-circle me-2"></i>Play video
+            </button>
+          </div>
+        </div>
+        <div class="row align-items-center gy-5">
+          <div class="col-lg-6">
+            <h2>Make your own success as simple you clap</h2>
+            <p class="text-muted">
+              Dolor sit amet consectetur elit sed do eiusmod tempor incididunt
+              labore dolore magna aliqua enim ad minim veniam quis nostrud
+              exercitation.
+            </p>
+            <ul class="list-check">
+              <li class="text-muted mb-2">Various Analysis Options</li>
+              <li class="text-muted mb-2">
+                Page Load Details (time, size, number of requests)
+              </li>
+              <li class="text-muted mb-2">
+                Waterfall, Video and Report History
+              </li>
+            </ul>
+            <button
+              class="btn btn-primary js-modal-btn"
+              data-video-id="B6uuIHpFkuo"
+            >
+              <i class="fas fa-play-circle me-2"></i>Play video
+            </button>
+          </div>
+          <div class="col-lg-6">
+            <div class="row gy-4">
+              <div class="col-lg-6 col-sm-6">
+                <!-- Services Item-->
+                <div class="card border-0 shadow rounded-lg text-start px-2">
+                  <div class="card-body px py-5">
+                    <svg
+                      class="svg-icon"
+                      style="width: 40px; height: 40px; color: #ff904e"
+                    >
+                      <use xlink:href="#document-saved-1"></use>
+                    </svg>
+                    <h3 class="h5 my-3">Online Marketing</h3>
+                    <p class="text-sm mb-0 text-muted">
+                      Lorem ipsum dolor amet consectetur adipisicing.
+                    </p>
                   </div>
                 </div>
-                <div class="col-lg-6 col-sm-6">
-                  <!-- Services Item-->
-                  <div class="card border-0 shadow rounded-lg text-start px-2">
-                    <div class="card-body px py-5">
-                      <svg
-                        class="svg-icon"
-                        style="width: 40px; height: 40px; color: #39f8d2"
-                      >
-                        <use xlink:href="#map-marker-1"></use>
-                      </svg>
-                      <h3 class="h5 my-3">Track your move</h3>
-                      <p class="text-sm mb-0 text-muted">
-                        Lorem ipsum dolor amet consectetur adipisicing.
-                      </p>
-                    </div>
+              </div>
+              <div class="col-lg-6 col-sm-6">
+                <!-- Services Item-->
+                <div class="card border-0 shadow rounded-lg text-start px-2">
+                  <div class="card-body px py-5">
+                    <svg
+                      class="svg-icon"
+                      style="width: 40px; height: 40px; color: #39f8d2"
+                    >
+                      <use xlink:href="#map-marker-1"></use>
+                    </svg>
+                    <h3 class="h5 my-3">Track your move</h3>
+                    <p class="text-sm mb-0 text-muted">
+                      Lorem ipsum dolor amet consectetur adipisicing.
+                    </p>
                   </div>
                 </div>
-                <div class="col-lg-6 col-sm-6">
-                  <!-- Services Item-->
-                  <div class="card border-0 shadow rounded-lg text-start px-2">
-                    <div class="card-body px py-5">
-                      <svg
-                        class="svg-icon"
-                        style="width: 40px; height: 40px; color: #8190ff"
-                      >
-                        <use xlink:href="#arrow-target-1"></use>
-                      </svg>
-                      <h3 class="h5 my-3">Market analysis</h3>
-                      <p class="text-sm mb-0 text-muted">
-                        Lorem ipsum dolor amet consectetur adipisicing.
-                      </p>
-                    </div>
+              </div>
+              <div class="col-lg-6 col-sm-6">
+                <!-- Services Item-->
+                <div class="card border-0 shadow rounded-lg text-start px-2">
+                  <div class="card-body px py-5">
+                    <svg
+                      class="svg-icon"
+                      style="width: 40px; height: 40px; color: #8190ff"
+                    >
+                      <use xlink:href="#arrow-target-1"></use>
+                    </svg>
+                    <h3 class="h5 my-3">Market analysis</h3>
+                    <p class="text-sm mb-0 text-muted">
+                      Lorem ipsum dolor amet consectetur adipisicing.
+                    </p>
                   </div>
                 </div>
-                <div class="col-lg-6 col-sm-6">
-                  <!-- Services Item-->
-                  <div class="card border-0 shadow rounded-lg text-start px-2">
-                    <div class="card-body px py-5">
-                      <svg
-                        class="svg-icon"
-                        style="width: 40px; height: 40px; color: #ff634b"
-                      >
-                        <use xlink:href="#sorting-1"></use>
-                      </svg>
-                      <h3 class="h5 my-3">Full Settings</h3>
-                      <p class="text-sm mb-0 text-muted">
-                        Lorem ipsum dolor amet consectetur adipisicing.
-                      </p>
-                    </div>
+              </div>
+              <div class="col-lg-6 col-sm-6">
+                <!-- Services Item-->
+                <div class="card border-0 shadow rounded-lg text-start px-2">
+                  <div class="card-body px py-5">
+                    <svg
+                      class="svg-icon"
+                      style="width: 40px; height: 40px; color: #ff634b"
+                    >
+                      <use xlink:href="#sorting-1"></use>
+                    </svg>
+                    <h3 class="h5 my-3">Full Settings</h3>
+                    <p class="text-sm mb-0 text-muted">
+                      Lorem ipsum dolor amet consectetur adipisicing.
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </section>
+    <!-- Testimonials Section -->
     <section
       class="p-0"
       id="testimonials"
