--- a/header.html
+++ b/header.html
@@ -27,6 +27,9 @@
             <a class="nav-link link-scroll" href="#about">Nosotros</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link link-scroll" href="#features">Características</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link link-scroll" href="#services">Servicios</a>
           </li>
           <li class="nav-item">
