Avance vista landing
Se crea sección donde se muestran funcionalidades de proyecto nutricionistas con un efecto blur para colocar proximanente.

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
             Potencia tu negocio y práctica nutricional con nuestras aplicaciones
             web especializadas
           </h2> -->
+          <!-- SECTION FOR PYMES -->
           <div class="row align-items-center gy-5">
             <div class="col-lg-6">
               <h2>Potentes herramientas para el éxito empresarial</h2>
@@ -276,6 +277,142 @@
                 </div>
               </div>
             </div>
+          </div>
+          <!-- SECTION FOR NUTRICIONISTAS -->
+          <div class="coming-soon-overlay mt-5">
+            <div class="coming-soon-content">
+              <div class="row text-end align-items-center">
+                <div class="title-nutri">
+                  <p class="h6 text-uppercase text-primary">
+                    Aplicación para Nutricionistas
+                  </p>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                  <h2>
+                    Gestión inteligente para profesionales de la nutrición
+                  </h2>
+                  <p class="text-muted">
+                    Nuestra aplicación web especializada en nutrición te brinda
+                    las herramientas necesarias para simplificar y potenciar tu
+                    práctica profesional. Con funciones como la gestión de
+                    registros sanitarios, etiquetado nutricional automatizado,
+                    análisis nutricional avanzado y comunicación segura, nuestra
+                    aplicación te permite ofrecer un enfoque personalizado y
+                    eficiente en la atención nutricional. Accede a tus datos en
+                    cualquier momento y lugar, y mejora la experiencia de tus
+                    pacientes con nuestra solución intuitiva y basada en la
+                    nube.
+                  </p>
+                  <ul class="list-check-reversed">
+                    <li class="text-muted mb-2">
+                      Gestión de registros sanitarios
+                    </li>
+                    <li class="text-muted mb-2">
+                      Etiquetado nutricional automatizado
+                    </li>
+                    <li class="text-muted mb-2">
+                      Análisis nutricional avanzado
+                    </li>
+                    <li class="text-muted mb-2">
+                      Planificación de dietas y seguimiento
+                    </li>
+                    <li class="text-muted mb-2">
+                      Acceso desde cualquier lugar
+                    </li>
+                  </ul>
+                  <button
+                    class="btn btn-primary js-modal-btn"
+                    data-video-id="B6uuIHpFkuo"
+                    disabled
+                  >
+                    <i class="fas fa-play-circle me-2"></i>Video demo
+                  </button>
+                </div>
+                <div class="col-lg-6 order-lg-0">
+                  <div
+                    class="row gy-4 flex-column flex-lg-row features-container"
+                  >
+                    <div class="col-lg-6 col-sm-6">
+                      <!-- Services Item-->
+                      <div
+                        class="card border-0 shadow rounded-lg text-start px-2"
+                      >
+                        <div class="card-body px py-5">
+                          <svg
+                            class="svg-icon"
+                            style="width: 40px; height: 40px; color: #ff904e"
+                          >
+                            <use xlink:href="#document-saved-1"></use>
+                          </svg>
+                          <h3 class="h5 my-3">Carácteristica 1</h3>
+                          <p class="text-sm mb-0 text-muted">
+                            Info característica 1.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-6">
+                      <!-- Services Item-->
+                      <div
+                        class="card border-0 shadow rounded-lg text-start px-2"
+                      >
+                        <div class="card-body px py-5">
+                          <svg
+                            class="svg-icon"
+                            style="width: 40px; height: 40px; color: #39f8d2"
+                          >
+                            <use xlink:href="#map-marker-1"></use>
+                          </svg>
+                          <h3 class="h5 my-3">Carácteristica 2</h3>
+                          <p class="text-sm mb-0 text-muted">
+                            Info característica 2.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-6">
+                      <!-- Services Item-->
+                      <div
+                        class="card border-0 shadow rounded-lg text-start px-2"
+                      >
+                        <div class="card-body px py-5">
+                          <svg
+                            class="svg-icon"
+                            style="width: 40px; height: 40px; color: #8190ff"
+                          >
+                            <use xlink:href="#arrow-target-1"></use>
+                          </svg>
+                          <h3 class="h5 my-3">Carácteristica 3</h3>
+                          <p class="text-sm mb-0 text-muted">
+                            Info característica 3.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-6">
+                      <!-- Services Item-->
+                      <div
+                        class="card border-0 shadow rounded-lg text-start px-2"
+                      >
+                        <div class="card-body px py-5">
+                          <svg
+                            class="svg-icon"
+                            style="width: 40px; height: 40px; color: #ff634b"
+                          >
+                            <use xlink:href="#sorting-1"></use>
+                          </svg>
+                          <h3 class="h5 my-3">Carácteristica 4</h3>
+                          <p class="text-sm mb-0 text-muted">
+                            Info característica 4.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="coming-soon-text">Próximamente</div>
           </div>
           <!-- <div class="row pb-5 gy-4">
             <div class="col-lg-4 col-md-6">
