--- a/header.html
+++ b/header.html
@@ -30,12 +30,14 @@
             <a class="nav-link link-scroll" href="#features">Características</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link-scroll" href="#services">Servicios</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link link-scroll" href="#testimonials"
               >Testimonials</a
             >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-scroll" href="#join-us">
+              ¡Únete!
+            </a>
           </li>
         </ul>
       </div>
